fixed menu and problem with displaying on tablets -  version strong develop ended, TODO: lot of refactor

--- a/src/components/responsiveMenu.css
+++ b/src/components/responsiveMenu.css
@@ -1,5 +1,5 @@
 .responsive-menu{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
